--- a/pages/setting.user.css
+++ b/pages/setting.user.css
@@ -187,3 +187,33 @@ button{
 h3{
     color: #333;
 }
+.attendance_linker{
+    position: absolute;
+    top: 20px;
+    right: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 180px;
+    height: 180px;
+}
+.attendance_linker a{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #333;
+    position: relative;
+}
+.attendance_linker a img{
+    width: 100%;
+    height: 100%;
+    border-radius: 7px;
+    border: 1px solid #6d5fb4;
+}
+.attendance_linker p{
+    position: absolute;
+    width: 100%;
+    left: 200px;
+    text-decoration: underline;
+}
