--- a/pages/profile.darkMood.user.css
+++ b/pages/profile.darkMood.user.css
@@ -252,3 +252,13 @@ tr td:nth-child(1){
     width: 70px;
     text-align: left;
 }
+@media (max-width:768px) {
+    body{
+    align-items: start;
+    justify-content: start;
+    background: #282828;
+}
+.main-container{
+    border: 1px solid #ffffff27;
+}
+}
