--- a/pages/setting.darkMood.user.css
+++ b/pages/setting.darkMood.user.css
@@ -218,3 +218,13 @@ h3{
     left: 200px;
     text-decoration: underline;
 }
+@media (max-width:768px) {
+    body{
+    align-items: start;
+    justify-content: start;
+    background: #282828;
+}
+.main-container{
+    border: 1px solid #ffffff27;
+}
+}
