--- a/pages/notification.darkMood.user.css
+++ b/pages/notification.darkMood.user.css
@@ -237,3 +237,13 @@ summary{
     overflow: hidden;
     margin-top: 12px;
 }
+@media (max-width:768px) {
+    body{
+    align-items: start;
+    justify-content: start;
+    background: #282828;
+}
+.main-container{
+    border: 1px solid #ffffff27;
+}
+}
