--- a/pages/pleasePayPage.css
+++ b/pages/pleasePayPage.css
@@ -62,3 +62,16 @@ body{
 .needHelp div{
     font-size: 30px;
 }
+@media (max-width: 768px){
+    body{
+        overflow: visible;
+    }
+    .needHelp{
+        top: 20px;
+        right: 20px;
+    }
+    .text1{
+        width: 100%;
+        margin-top: 70px;
+    }
+}
