--- a/pages/setting.user.css
+++ b/pages/setting.user.css
@@ -217,3 +217,13 @@ h3{
     left: 200px;
     text-decoration: underline;
 }
+@media (max-width:768px) {
+    body{
+    align-items: start;
+    justify-content: start;
+    background: #e3e2ef00;
+}
+.main-container{
+    border: 1px solid #00000027;
+}
+}
