--- a/pages/signUp_darkMood.user.css
+++ b/pages/signUp_darkMood.user.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+
 body{
     background: #313131;
     align-items: center;
@@ -13,21 +15,23 @@ body{
     background-image: url('../images/photo-1583454110551-21f2fa2afe61.avif');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; 
     border-radius: 10px;
     margin-left: 20px;
 }
 .logo_top{
-    font-family: "Noto Serif", serif;
-    font-optical-sizing: auto;
-    font-weight: 900;
-    font-style: italic;
-    font-variation-settings:"wdth" 100;
-    font-size: 45px;
     position: absolute;
     top: 50px;
     left: 60px;
     color: #fff;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 40px;
 }
 .back{
     display: flex;
@@ -73,7 +77,7 @@ body{
     background: #2d2d2d;
     border-radius: 10px;
     border: 1px solid #ffffff48;
-    margin-top: -10px;
+    margin-top: 10px;
 }
 form{
     display: flex;
@@ -205,4 +209,43 @@ form button{
     justify-content: center;
     display: flex;
     margin: 0 auto;
+}
+@media (max-width: 768px){
+    body{
+        overflow: visible;
+    }
+   .main_container{
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    border: none;
+    background: transparent;
+    padding: 0 0 30px 0;
+    margin-top: 70px;
+} 
+.logo_top{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+.price_plan_number{
+    margin-top: 50px;
+    right: 20px;
+}
+.cover_img{
+    display: none;
+}
+.back{
+    display: none;
+}
+.description{
+    display: none;
+}
+form{
+    margin-left: 0px;
+    margin-top: 50px;
+}
+h1{
+    font-size: 35px;
+}
 }
