--- a/pages/style.css
+++ b/pages/style.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     font-family: "Poppins", sans-serif;
-    min-height: 100vh;
+    min-height: auto;
     /* overflow: hidden; */
     /* display: flex; */
     /* align-items: center; */
     /* justify-content: center; */
     background: #999999;
-    overflow: hidden;
 }
 ::-webkit-scrollbar{
     width: 0;
@@ -641,4 +640,12 @@ a{
 .attendance_dropdown_icon{
     rotate: 90deg;
     font-size: 13px;
+}
+@media (max-width:768px) {
+    body{
+        background: #282828;
+    }
+    .container_main{
+        border: 1px solid #ffffff27;
+    }
 }
