--- a/pages/style2.css
+++ b/pages/style2.css
@@ -2,11 +2,8 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    min-height: 100vh;
+    min-height: auto;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: #6d5fb41a;
 }
 .container_main{
@@ -591,4 +588,12 @@ a{
 .attendance_dropdown_icon{
     rotate: 90deg;
     font-size: 13px;
+}
+@media (max-width:768px) {
+    body{
+        background: #e3e2ef00;
+    }
+    .container_main{
+        border: 1px solid #00000027;
+    }
 }
