--- a/pages/payment/style.css
+++ b/pages/payment/style.css
@@ -8,6 +8,7 @@ body{
 }
 .container{
     width: 100%;
+    max-width: 400px;
     top: 0;
     left: 0;
     display: flex;
@@ -54,8 +55,19 @@ body{
     position: relative;
     min-height: 60px;
   }
+.alert{
+    margin: 0;
+    margin-top: -20px;
+    display: none;
+}
+.alert .red{
+    color: red;
+}
+.alert .green{
+    color: green;
+}
 .logo_top{
-    font-family: "Noto Serif", serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: italic;
@@ -143,7 +155,7 @@ button{
     box-shadow: 3px 0px 15px -4px #6d5fb4;
 
     outline: none;
-    border: 1px solid #47474741;
+    border: none;
     color: #fff;
     font-size: 19px;
     border-radius: 10px;
