--- a/pages/userRegistration.darkMood.user.css
+++ b/pages/userRegistration.darkMood.user.css
@@ -285,3 +285,7 @@ input[type="checkbox"] {
 .loading-spinner {
     animation: spin 1s ease-in-out infinite, pulse 2s ease-in-out infinite;
 }
+.body_measure{
+    display: flex;
+    gap: 10px;
+}
